--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tienda</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="css/wiev.css">
+    <script src="js/script.js" defer></script>
 </head>
 <body>
     <h1>Registro de Productos</h1>
@@ -15,7 +15,12 @@
             <input type="text" id="productName" name="productName" required><br><br>
 
             <label for="category">Categoría:</label>
-            <input type="text" id="category" name="category" required><br><br>
+            <select id="category" name="category" required>
+                <option value="Alimentos">Alimentos</option>
+                <option value="Bebidas">Bebidas</option>
+                <option value="Electrónica">Electrónica</option>
+                <option value="Ropa">Ropa</option>
+            </select><br><br>
 
             <label for="quantity">Cantidad:</label>
             <input type="number" id="quantity" name="quantity" required><br><br>
@@ -36,7 +41,13 @@
         <input type="text" id="searchProduct" onkeyup="filterProducts()"><br><br>
 
         <label for="searchCategory">Buscar por Categoría:</label>
-        <input type="text" id="searchCategory" onkeyup="filterProducts()">
+        <select id="searchCategory" onchange="filterProducts()">
+            <option value="">Todas</option>
+            <option value="Alimentos">Alimentos</option>
+            <option value="Bebidas">Bebidas</option>
+            <option value="Electrónica">Electrónica</option>
+            <option value="Ropa">Ropa</option>
+        </select>
     </div>
 
     <h2>Lista de Productos</h2>
