--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <label for="price">Precio:</label>
             <input type="number" id="price" name="price" required><br><br>
 
-            <button type="submit">Guardar Producto</button>
+            <button type="submit" class="btn btn-success">Guardar Producto</button> 
         </form>
     </div>
 
@@ -52,7 +52,7 @@
     </div>
 
     <h2>Lista de Productos</h2>
-    <table class="table-secondary" id="productTable">
+    <table class="table-info" id="productTable">
         <thead>
             <tr>
                 <th scope="col">#</th>
@@ -64,13 +64,13 @@
                 <th>Acciones</th>
             </tr>
         </thead>
-        <tbody>
+        <tbody id="productTableBody">
           <tr>
            <!--  --> 
         
           </tr>
     
-        </tbody id="productTableBody">
+        </tbody >
       </table>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"  crossorigin="anonymous"></script>
       <script src="js/script.js" defer></script>
